# lancefennell

./: .gitignore  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: app.yml
exports/: paintings.xml  sitemap.xml  studio.xml  tribute.txt
scripts/: freeze_site.py  list_redirects.py  list_wget.py  make_data.py  make_site.py  update_href.py
src/lancefennell/: app.py  data.py
src/lancefennell/resources/cloudflare/: _redirects
src/lancefennell/resources/styles/: main.css
src/lancefennell/static/css/: main.css
src/lancefennell/templates/: 404.j2  index.j2  item.j2  items.j2  remembrance.j2  tribute.j2
src/lancefennell/templates/_includes/: instagram.j2  nav.j2
src/lancefennell/templates/_layouts/: main.j2
